[package]
name = "fluvio-client-node"
version = "0.0.0"
edition = "2021"
authors = ["Fluvio Contributors <team@fluvio.io>"]
license = "Apache-2.0"
repository = "https://github.com/infinyon/fluvio-client-node"
description = "Node JS Client for Fluvio"
readme = "README.md"

[lib]
crate-type = ["cdylib"]
test = false

[dependencies]
anyhow = "1.0.38" 
base64 = "0.21.0"
tracing = "0.1.19"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
node-bindgen = "5.1.0"
flate2 = "1.0.24"
fluvio = { features = ["admin"], git = "https://github.com/infinyon/fluvio.git", tag = "v0.10.8" }
fluvio-future = { version = "0.5.1", features = ["tls", "task", "io"] }
fluvio-spu-schema = { git = "https://github.com/infinyon/fluvio.git", tag = "v0.10.9" } 

[build-dependencies]
node-bindgen = { version = "5.1.0", default-features = false, features = ["build"] }
