[package]
name = "fluvio-client-node"
version = "0.0.0"
edition = "2021"
authors = ["Fluvio Contributors <team@fluvio.io>"]
license = "Apache-2.0"
repository = "https://github.com/infinyon/fluvio-client-node"
description = "Node JS Client for Fluvio"
readme = "README.md"

[lib]
crate-type = ["cdylib"]
test = false

[dependencies]
anyhow = "1.0"
base64 = "0.22"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
node-bindgen = "6.0"
flate2 = "1.0"
fluvio-future = { version = "0.6.2", features = ["tls", "task", "io"] }
fluvio = { features = ["admin"], git = "https://github.com/infinyon/fluvio.git", tag = "v0.11.7" }
fluvio-spu-schema = { git = "https://github.com/infinyon/fluvio.git", tag = "v0.11.6" }

[build-dependencies]
node-bindgen = { version = "6.0", default-features = false, features = ["build"] }
