[package]
name = "server-logs-filter"
version = "0.1.0"
authors = ["Alan Chen <alan@infinyon.com>"]
edition = "2021"

[lib]
crate-type = ['cdylib']

[dependencies]
fluvio-smartmodule = "0.7.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
once_cell = "1.13.0"

[profile.release-lto]
inherits = "release"
lto = true
strip = "symbols"
